temp_ingress/ingress-to-istio.yaml
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#labels:
#app.kubernetes.io/component: controller
#app.kubernetes.io/instance: ingress-nginx-system
#app.kubernetes.io/name: ingress-nginx-system
#app.kubernetes.io/part-of: ingress-nginx-system
#app.kubernetes.io/version: 1.5.1
#name: nginx-system-for-hdbi-istiogateway
#spec:
#controller: k8s.io/ingress-nginx-system
#---
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-istiogateway
  annotations:
    #kubernetes.io/ingress.class: "nginx-system-for-hdbi-istiogateway"
    kubernetes.io/ingress.class: "nginx-system"
spec:
  rules:
  - host: "hdbi-ml-stg.deliveryservice.or.kr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
